feat:added docker and docker compose file
