# docs/swagger.json
@@ -15,6 +15,46 @@
         }
     },
     "paths": {
+        "/activate/{token}": {
+            "put": {
+                "description": "Allows the  user to activate himself",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "activate a user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Token to verify",
+                        "name": "token",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "you activate your account successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            }
+        },
         "/posts": {
             "get": {
                 "description": "Retrieves a list of all posts",
@@ -446,7 +486,7 @@
                     }
                 ],
                 "responses": {
-                    "200": {
+                    "204": {
                         "description": "you unfollowed successfully",
                         "schema": {
                             "type": "string"
